--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ cmake_policy(SET CMP0077 NEW)
 # Set the C++ standard to C++17
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(GEODESY_UNIT_TEST "geodesy-unit-test")
 
 # ----------------------- Dependencies ----------------------- #
 
@@ -19,7 +20,7 @@ FetchContent_Declare(
     GIT_REPOSITORY      https://github.com/FermionicChaos/geodesy.git
     GIT_TAG             renderer
 )
-FetchContent_MakeAvailable(assimp)
+FetchContent_MakeAvailable(geodesy)
 
 # ----------------------- Geodesy Unit Test ----------------------- #
 # When creating your own project off of the Geodesy Library, use this
@@ -27,36 +28,15 @@ FetchContent_MakeAvailable(assimp)
 
 project(${GEODESY_UNIT_TEST})
 
-# Find and include OpenMP
-find_package(OpenMP REQUIRED)
-if(OpenMP_CXX_FOUND)
-    message("OpenMP found.")
-endif()
-
-# Find and include Vulkan
-find_package(Vulkan REQUIRED)
-if(Vulkan_FOUND)
-    message("Vulkan found.")
-endif()
-
 # Link against Vulkan and OpenMP
-add_executable(${GEODESY_UNIT_TEST} main.cpp res/icon.rc)
+add_executable(${GEODESY_UNIT_TEST} main.cpp)
 
 set_target_properties(${GEODESY_UNIT_TEST} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_SYSTEM_NAME}/${CMAKE_BUILD_TYPE}/)
 
 # Include directories
 target_include_directories(${GEODESY_UNIT_TEST} PRIVATE ${Vulkan_INCLUDE_DIRS}/)
 target_include_directories(${GEODESY_UNIT_TEST} PRIVATE ${CMAKE_SOURCE_DIR}/inc/)
-
-# Link Against Vulkan
-if(OpenMP_CXX_FOUND)
-    target_link_libraries(${GEODESY_UNIT_TEST} PRIVATE OpenMP::OpenMP_CXX)
-endif()
-
-# Link Against Vulkan
-if(Vulkan_FOUND)
-    target_link_libraries(${GEODESY_UNIT_TEST} PRIVATE ${Vulkan_LIBRARY})
-endif()
+target_include_directories(${GEODESY_UNIT_TEST} PRIVATE ${FETCHCONTENT_BASE_DIR}/inc/)
 
 # Link Against Geodesy Library
-target_link_libraries(${GEODESY_UNIT_TEST} PRIVATE ${GEODESY_LIBRARY})
+target_link_libraries(${GEODESY_UNIT_TEST} PRIVATE geodesy)
